# LLM-Prediction-Sentiment-Analysis

./: .gitignore  README.md
algorithm/: main.py  onboarding.py  pyproject.toml
algorithm/algopkg/: __init__.py  config.py  onboarding.py
algorithm/algopkg/agents/: agent.py  prompt_manager.py  ticker_selector.py
algorithm/algopkg/data_models/: portfolio.py  stock_data.py
algorithm/algopkg/llm_clients/: chatgpt_client.py  claude_client.py  gemini_client.py  llm_base.py  llm_registry.py  model_tiers.py  model_tiers_config.py  ollama_client.py  perplexity_client.py  sentiment_client.py
algorithm/algopkg/progress_ui/: rich_progress.py  status.py
algorithm/algopkg/utils/: env.py  paths.py
backend/: config.ini  main.py
