[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "algopkg"
version = "0.1.0"
description = "AI finance agent for portfolio analysis and LLM bias experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Simon Bergeron" }
]
license = { text = "MIT" }

# Runtime dependencies for the algorithm package
dependencies = [
  "pandas>=2.0",
  "yfinance>=0.2",
  "numpy>=1.26",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/importstring/LLM-Prediction-Sentiment-Analysis"
Issues = "https://github.com/importstring/LLM-Prediction-Sentiment-Analysis
/issues"

[tool.setuptools]
packages = ["algopkg"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
exclude = ["data/", "frontend/"]
