[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "algopkg"
version = "0.1.0"
description = "AI finance agent for portfolio analysis and LLM bias experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Simon Bergeron" }
]
license = { text = "MIT" }

# Runtime dependencies for the algorithm package [Jan 2026]
dependencies = [
  "pandas>=2.2.3,<3.0",
  "numpy>=1.26,<3.0",
  "yfinance>=0.2.52,<0.3",
  "rich>=13.9,<15.0",
  "python-dotenv>=1.0,<2.0",

  "requests>=2.31,<3.0",
  "aiohttp>=3.9,<4.0",
  "tenacity>=8.2,<9.0",

  "openai>=1.6,<2.0",       
  "anthropic>=0.39,<1.0",   
  "google-genai>=0.6,<1.0", 
]


[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/importstring/LLM-Prediction-Sentiment-Analysis"
Issues = "https://github.com/importstring/LLM-Prediction-Sentiment-Analysis
/issues"

[tool.setuptools]
packages = ["algopkg"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
exclude = ["data/", "frontend/"]
