[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "algopkg"
version = "0.1.0"
description = "AI finance agent for portfolio analysis and LLM bias experiments."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Simon Bergeron" }
]
license = { text = "MIT" }

# Runtime dependencies for the algorithm package [Jan 2026]
dependencies = [
  # Core data stack
  "pandas>=2.2.3,<2.4",      # 2.2.3 and 2.3.x are current stable; keep <2.4 while 3.0 is brewing 
  "numpy>=1.26,<3.0",        # 1.26 supports Python 3.12; 2.x is still a big jump 
  "lxml>=5.0,<6.0",          # HTML parsing backend required by pandas.read_html

  # Market data
  "yfinance>=0.2.52,<0.3",   # 0.2.52+ includes YFRateLimitError + recent fixes

  # NLP
  "nltk>=3.9,<4.0",          # 3.9.x supports Python 3.9–3.13 

  # CLI / config
  "rich>=13.9,<15.0",
  "python-dotenv>=1.0,<2.0", # 1.x current, supports modern Python 

  # HTTP / async / retries
  "requests>=2.31,<3.0",
  "aiohttp>=3.9,<4.0",
  "tenacity>=8.2,<9.0",
  "urllib3>=2.2,<3.0",       # so Retry.backoff_jitter is available

  # LLM clients
  "openai>=1.40,<2.0",       # latest 1.x line with many fixes/features
  "anthropic>=0.39,<1.0",
  "google-genai>=0.6,<2.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "black>=24.10,<25.0",
  "ruff>=0.6,<0.7",
  "mypy>=1.11,<2.0",
]

[project.urls]
Homepage = "https://github.com/importstring/LLM-Prediction-Sentiment-Analysis"
Issues = "https://github.com/importstring/LLM-Prediction-Sentiment-Analysis/issues"

[tool.setuptools]
packages = ["algopkg"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
exclude = ["data/", "frontend/"]
